--- a/src/Component/Header/Header.css
+++ b/src/Component/Header/Header.css
@@ -2,4 +2,6 @@
   width: 100%;
   height: 100vh;
   background-image: linear-gradient(to top left, #371b58, #7858a6);
+  clip-path: polygon(0 0, 100% 0, 100% 78%, 50% 100%, 50% 100%, 0 78%);
+  z-index: -1;
 }
