--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,10 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 body {
   font-family: 'Montserrat', sans-serif;
   font-size: 62.5%;
+  z-index: 2;
 }
