--- a/src/Component/Layout/NavBar.css
+++ b/src/Component/Layout/NavBar.css
@@ -34,10 +34,9 @@
 }
 .nav__line-1 button {
   padding: 0.6rem;
-  width: 8rem;
+  width: 6rem;
   color: #ffffff;
-  background-image: linear-gradient(90deg, #7858a6, #371b58);
-  border: none;
+  border: 1px solid rgb(212, 211, 211);
   border-radius: 8px;
   font-size: 1rem;
   position: relative;
