--- a/src/Component/LivePrograms/LiveCourseSlider.css
+++ b/src/Component/LivePrograms/LiveCourseSlider.css
@@ -1,5 +1,5 @@
 #course-card__img {
-  width: 18rem;
+  width: 100%;
   height: 10rem;
   border-radius: 8px;
 }
@@ -7,15 +7,15 @@
   width: 100%;
 }
 .course__card {
-  width: 20rem;
-  height: 25rem;
+  width: 18rem;
+  height: 23rem;
   box-shadow: 0 5px 18px rgba(0, 0, 0, 0.3);
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
   padding: 1rem;
-  margin: 4rem;
+  margin: 6rem;
   border-radius: 8px;
   transition: all 0.3s ease-in-out;
 }
