--- a/src/Component/LivePrograms/LiveCourseSlider.css
+++ b/src/Component/LivePrograms/LiveCourseSlider.css
@@ -7,15 +7,15 @@
   width: 100%;
 }
 .course__card {
-  width: 18rem;
-  height: 23rem;
+  width: 20rem;
+  height: 25rem;
   box-shadow: 0 5px 18px rgba(0, 0, 0, 0.3);
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
   padding: 1rem;
-  margin: 6rem;
+  margin: 4rem;
   border-radius: 8px;
   transition: all 0.3s ease-in-out;
 }
@@ -27,4 +27,12 @@ h4 {
 }
 .course__card:hover {
   transform: scale(1.1);
+}
+@media (max-width: 1366px) {
+  .course__card {
+    width: 18rem;
+    height: 22rem;
+    margin: 6rem;
+    padding: 1rem;
+  }
 }
