--- a/src/Component/HallOfFame/HallOfFame.css
+++ b/src/Component/HallOfFame/HallOfFame.css
@@ -1,6 +1,7 @@
 .hall-of-fame__container {
   width: 100%;
   padding-top: 8rem;
+  overflow: hidden;
 }
 .hall-of-fame__container h2 {
   text-align: center;
@@ -42,14 +43,15 @@
 }
 .slider__card img {
   width: 12rem;
-  height: 12rem;
+  height: 14rem;
   border-radius: 50%;
+  padding-bottom: 1rem;
 }
 .slider__card h3 {
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 .slider__card p {
-  font-size: 0.8rem;
+  font-size: 0.7rem;
 }
 .card-icon {
   font-size: 2rem;
@@ -62,5 +64,19 @@
     width: 16rem;
     height: 22rem;
     margin: 6rem;
+  }
+}
+@media (max-width: 700px) {
+  .slider__card {
+    width: 15rem;
+    height: 22rem;
+    margin: 4rem 1rem;
+  }
+  .hall-of-fame__container h2 {
+    font-size: 1.5rem;
+    padding-bottom: 1rem;
+  }
+  .hall-of-fame__container {
+    padding-top: 4rem;
   }
 }
