--- a/src/Component/Institutions/Institutions.css
+++ b/src/Component/Institutions/Institutions.css
@@ -1,6 +1,7 @@
 .institutions__container {
   width: 100%;
   margin-top: 8rem;
+  overflow: hidden;
 }
 .institutions__container h2 {
   text-align: center;
@@ -10,17 +11,60 @@
 .institutions__logo {
   width: 80%;
   margin: auto;
+  margin-top: 4rem;
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.line__1 {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 4rem;
-  padding: 2rem;
+  margin: 2rem;
 }
-.logos {
+.line__2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 2rem;
+}
+.ins__logos img {
   width: 10rem;
   height: 8rem;
-  background-color: #e9e7e7;
   margin: 1rem;
   text-align: center;
   border-radius: 8px;
+}
+@media (max-width: 700px) {
+  .institutions__container {
+    margin-top: 4rem;
+  }
+  .ins__logos img {
+    width: 6rem;
+    height: 6rem;
+    margin: 1rem;
+    text-align: center;
+    border-radius: 8px;
+  }
+  .institutions__container h2 {
+    font-size: 1.5rem;
+  }
+  .institutions__logo {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+  }
+
+  .line__1 {
+    display: flex;
+    flex-direction: row;
+    margin: 0.5rem 0;
+  }
+  .line__2 {
+    display: flex;
+    flex-direction: row;
+    margin: 0.5rem 0;
+  }
 }
