--- a/src/Component/Layout/Button.css
+++ b/src/Component/Layout/Button.css
@@ -34,3 +34,13 @@
 .btn:hover::before {
   transform: scaleX(1);
 }
+@media (max-width: 700px) {
+  .btn {
+    padding: 0.5rem;
+    font-size: 0.6rem;
+    border-radius: 5px;
+  }
+  .btn::before {
+    border-radius: 5px;
+  }
+}
