--- a/src/Component/Layout/HeaderSlide.css
+++ b/src/Component/Layout/HeaderSlide.css
@@ -10,6 +10,7 @@
   justify-content: space-around;
   align-items: center;
   position: relative;
+  overflow: hidden;
 }
 .header__slider {
   display: flex;
