--- a/src/Component/Footer/Footer.css
+++ b/src/Component/Footer/Footer.css
@@ -120,10 +120,12 @@
   }
 
   .footer__container-sub {
-    width: 90%;
+    width: 95%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
+    margin: auto;
   }
 
   .info {
@@ -152,7 +154,7 @@
     margin-top: 0rem;
   }
   .footer-info__2 {
-    margin-left: 3rem;
+    margin-left: 10%;
   }
   .footer-info__2 h4 {
     font-size: 1rem;
