Buttons in Live-Course section hidden for small devices

--- a/src/Component/LivePrograms/LiveCourseSlider.css
+++ b/src/Component/LivePrograms/LiveCourseSlider.css
@@ -42,7 +42,7 @@ h4 {
   .course__card {
     width: 16rem;
     height: 22rem;
-    margin: 4rem;
+    margin: 4rem 3rem;
   }
   .hall-of-fame__slider {
     width: 95%;
