--- a/src/Component/TechAvengers/TechAvengers.css
+++ b/src/Component/TechAvengers/TechAvengers.css
@@ -38,7 +38,7 @@
   .Avengers__card {
     width: 16rem;
     height: 22rem;
-    margin: 4rem;
+    margin: 4rem 3rem;
   }
   .Avengers__card h3 {
     font-size: 1.2rem;
