--- a/src/Component/HallOfFame/HallOfFame.css
+++ b/src/Component/HallOfFame/HallOfFame.css
@@ -70,7 +70,7 @@
   .slider__card {
     width: 16rem;
     height: 22rem;
-    margin: 4rem;
+    margin: 4rem 3rem;
   }
   .slider__card img {
     width: 12rem;
