--- a/src/Component/Footer/Footer.css
+++ b/src/Component/Footer/Footer.css
@@ -1,7 +1,11 @@
 .footer__container {
   width: 100%;
   height: 60vh;
-  background-image: linear-gradient(to top left, #371b58, #7858a6);
+  background-image: linear-gradient(
+    to top left,
+    rgba(0, 101, 164),
+    rgba(0, 36, 93)
+  );
   clip-path: polygon(50% 23%, 100% 0, 100% 100%, 0 100%, 0 0);
   margin-top: 8rem;
 
