--- a/src/Component/Header/Header.css
+++ b/src/Component/Header/Header.css
@@ -1,7 +1,13 @@
 .header__container {
   width: 100%;
   height: 100vh;
-  background-image: linear-gradient(to top left, #371b58, #7858a6);
+  background-image: linear-gradient(
+    to top left,
+
+    rgba(0, 101, 164),
+    rgba(0, 36, 93),
+    #251141
+  );
   clip-path: polygon(0 0, 100% 0, 100% 78%, 50% 100%, 50% 100%, 0 78%);
   overflow: hidden;
 }
