Heading text size changed for small devides

--- a/src/Component/Layout/HeaderSlide.css
+++ b/src/Component/Layout/HeaderSlide.css
@@ -117,6 +117,7 @@
     width: 90%;
     opacity: 0;
     transition: ease-out 0.4s;
+    margin-top: -8rem;
   }
   .slider__container {
     width: 100%;
@@ -132,7 +133,7 @@
     height: 15rem;
   }
   .header__text h3 {
-    font-size: 1.2rem;
+    font-size: 1rem;
     text-align: center;
   }
 
