--- a/src/Component/Layout/HeaderSlide.css
+++ b/src/Component/Layout/HeaderSlide.css
@@ -72,7 +72,7 @@
   display: flex;
   flex-direction: row;
   position: absolute;
-  bottom: 1rem;
+  bottom: 15%;
   left: 50%;
   transform: translateX(-50%);
 }
